[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-tools-server"
version = "0.1.0"
description = "MCP tools server for meta-cognitive agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "aiofiles>=23.2.0",
    "httpx>=0.25.0",
    "python-json-logger>=2.0.7",
    "pathvalidate>=3.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
mcp-tools-server = "mcp_tools_server.main:main"